--- a/app/globals.css
+++ b/app/globals.css
@@ -295,7 +295,7 @@
   }
 
   .form-btn {
-    @apply text-16 rounded-lg border border-bankGradient bg-bank-gradient font-semibold text-white shadow-form;
+    @apply text-16 rounded-md border bg-gradient-to-r from-cyan-500 to-blue-500 font-semibold text-white shadow-sm;
   }
 
   .form-link {
